--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -66,3 +66,25 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+nav {
+  position: fixed;
+  right: 0;
+  top: 0%;
+  display: flex;
+  justify-content: space-evenly;
+  border: solid 1px white;
+  width: 100%;
+  background-color: #272525;;;
+}
+.profile-button{
+  max-width: 100%;
+  max-height: 100%;
+  width: 40px;
+  height: 30px;
+  padding: 2px;
+  border-radius: 50%;
+  background-color: white;
+}
+.profile-button-button{
+  background: none;
+}
