--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -137,8 +137,8 @@ nav {
   max-width: 100%;
 }
 .item-img{
-  width:25em;
-  height: 12.5em;
+  width: 44em;
+  height: 26.5em;
 }
 @media only screen and (max-width: 600px) {
   .splash {
@@ -151,6 +151,30 @@ nav {
   .wrapper{
     width: 300px;
   }
+  .wrapper img{
+    width: 17em;
+    height: 10.5em;
+  }
+  .item-img{
+    width: 17em;
+    height: 13.5em;
+  }
+  .item-box {
+    background-color: #fff;
+    border: solid;
+    border-radius: 2%;
+    margin-top: 20px;
+    color: #000;
+    width: 368px;
+    padding: 10px;
+}
+.logo{
+  width: 368px;
+  height: 260px;
+}
+}
+.logo{
+  text-align: center;
 }
 /* .search{
   position: relative;
