--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -70,12 +70,14 @@ button:focus-visible {
 nav {
   position: fixed;
   right: 0;
-  top: 0%;
+  top: 0;
   display: flex;
   justify-content: space-evenly;
   border: solid 1px white;
   width: 100%;
-  background-color: #272525;;;
+  background-color: #272525;
+  height: 30px;
+  font-size: larger;
 }
 .profile-button{
   max-width: 100%;
@@ -88,6 +90,9 @@ nav {
 }
 .profile-button-button{
   background: none;
+  color: white;
+  margin-top: 4px;
+
 }
 .reviews{
   background-color: #beb6a1;
