--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -209,3 +209,19 @@ nav {
 .search{
   text-align: center;
 }
+
+form{
+  display: inline-block;
+}
+
+form button{
+    margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
