--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -225,3 +225,15 @@ form button{
     border-radius: 5px;
     cursor: pointer;
 }
+input {
+  display: block;
+  height: 50px;
+  width: 100%;
+  border-radius: 3px;
+}
+label {
+  display: block;
+  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 500;
+}
