--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -142,8 +142,9 @@ nav {
   max-width: 100%;
 }
 .item-img{
-  width: 44em;
-  height: 26.5em;
+  width: 30em;
+  height: 21.5em;
+  padding: 10px;
 }
 @media only screen and (max-width: 600px) {
   .splash {
@@ -158,8 +159,8 @@ nav {
     text-align: center;
   }
   .wrapper img{
-    width: 17em;
-    height: 10.5em;
+    width: 13em;
+    height: 8.5em;
   }
   .item-img{
     width: 17em;
@@ -189,7 +190,7 @@ nav {
   margin: auto;
 }
 .item-reviews {
-  .item-reviews {
+  
     border: solid rgb(201, 178, 178);
     border-radius: 5%;
     padding: 20px;
@@ -197,7 +198,7 @@ nav {
     margin-bottom: 5px;
     margin-left: 0px;
     width: 259px;
-}
+
 }
 }
 .logo{
