--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -112,13 +112,15 @@ nav {
   font-size: xx-large;
 }
 .items-box{
-  background-color: white;
+  background-color: #fff;
   border: solid;
   border-radius: 2%;
   margin-top: 20px;
-  color: black;
+  color: #000;
   padding: 10px;
   width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .item-box{
