--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -183,10 +183,6 @@ nav {
   height: 260px;
 }
 .login-to-add {
-  /* padding: 10px;
-  margin-bottom: 10px;
-  position: absolute;
-  margin-left: -33%; */
   padding: 10px;
   margin-bottom: 10px;
   display: block;
@@ -242,4 +238,9 @@ label {
   margin-top: 30px;
   font-size: 16px;
   font-weight: 500;
+}
+.search{
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
