--- a/Best-reviews/src/index.css
+++ b/Best-reviews/src/index.css
@@ -320,7 +320,7 @@ label {
 .profile-reviews{
   position: relative;
   width: 350px;
-  height: 200px;
+  height: 210px;
   margin-top: 20px;
   border-radius: 20px;
   padding: 40px;
@@ -328,7 +328,7 @@ label {
   background: #ecf0f3;
   display: flex;
   flex-direction: column;
-  right: 20px;
+  right: -68px;
 }
 .profile-comments{
   position: relative;
@@ -341,7 +341,7 @@ label {
   background: #ecf0f3;
   display: flex;
   flex-direction: column;
-  right: 20px;
+  right: -68px;
 }
 .profile-page-img{
   border: solid #000;
@@ -349,4 +349,17 @@ label {
   width: 250px;
   height: 200px;
   background-color: white;
+}
+.delete-rc{
+  position: relative;
+  width: 350px;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 20px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: #ecf0f3;
+  left: 34%;
+  display: flex;
+  flex-direction: column;
 }
